# quran_reminder

./: .gitignore  Cargo.toml  Procfile  README.md  app.json
assets/: .gitignore
locales/: ar.yml  en.yml
src/: config.rs  lib.rs  main.rs  page_result.rs  quran_version.rs  transporter.rs
src/transporter/: email_transporter.rs  transport.rs  whatsapp_transporter.rs
